[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
version = "0.1.0"
authors = ["Xavier Olive <git@xoolive.org>"]

[workspace.dependencies]
deku = "0.20.3"
desperado = { path = "../desperado/crates/desperado" }
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
