[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.package]
license = "MIT"
edition = "2021"
version = "0.1.0"
authors = ["Xavier Olive <git@xoolive.org>"]

# Profile configurations
[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true

[workspace.dependencies]
deku = "0.20.3"
desperado = "0.4.1"
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
shellexpand = "3"
